# wsre-intelligence

./: .env.example  .gitignore  AI_DISCLOSURE.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  Makefile  README.md  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_llm_article_fk.py  0003_weekly_briefs.py  0004_rent_index.py  0005_users.py  0006_tenders.py  0007_district_aliases.py  0008_postgis_spatial.py  0009_district_velocity.py  0010_fact_resolved.py  0011_seed_modon_r1.py  0012_poi_enrichment.py  0013_news_fact_tables.py  0014_macro_indicators.py  0015_jawnosc_developers.py  0016_developer_firms.py  0017_primary_pricing.py  0018_plot_evaluation_seed.py  0019_warsaw_pois.py  0020_warsaw_districts.py  0021_update_zoning_seed_towarowa.py  0022_zoning_seed_build_cost_override.py  0023_fix_regulatory_seed_plan_refs.py
backend/app/: main.py
backend/app/api/routes/: admin.py  auth.py  briefs.py  market.py  spatial.py  workbench.py
backend/app/briefing/: context.py  email.py  orchestrator.py  pdf_render.py  pdf_render_warsaw.py  warsaw_context.py  warsaw_orchestrator.py
backend/app/core/: config.py  database.py  logging.py  scheduler.py  security.py  storage.py
backend/app/ingestion/: base.py  circuit_breakers.py  reconciler.py
backend/app/ingestion/extractors/: news.py  warsaw_news.py
backend/app/ingestion/scrapers/: aqar.py  etimad.py  jawnosc.py  jawnosc_parser.py  knight_frank.py  modon.py  news.py  news_body.py  osm_districts.py  osm_pois.py  overpass.py  polish_news.py  rega.py  tadawul.py
backend/app/models/: __init__.py  auth.py  brief.py  facts.py  ingestion.py  llm.py  market.py  review.py  spatial.py
backend/app/pdf/: extractor.py
backend/app/scheduler/: jobs.py  main.py  runner.py
backend/app/scripts/: load_district_polygons.py  seed_admin.py  seed_default_sites.py  seed_districts.py
backend/app/services/: plot_evaluation.py
backend/app/structuring/: facts.py  news.py  pdf.py
backend/scripts/: backfill_reit_history.py  build_warsaw_streets.py  discover_jawnosc.py  ingest_jawnosc_canary.py  run_polish_pipeline.py  seed_spatial.py
backend/tests/: conftest.py  test_admin_api.py  test_auth.py  test_brief_email.py  test_brief_pdf.py  test_briefs_api.py  test_etimad.py  test_extractor_news.py  test_health.py  test_market_api.py  test_market_api_extra.py  test_models.py  test_news_body.py  test_news_generic_parser.py  test_pdf_extractor.py  test_reconciler.py  test_scrapers_canary.py  test_spatial_api.py  test_structuring_news.py  test_structuring_pdf.py  test_tadawul.py
data/: developer_firm_aliases.json  warsaw_streets.json
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BriefPanel.tsx  DataAlertBanner.tsx  ListingsPanel.tsx  NewsArticleModal.tsx  NewsFeed.tsx  ReitGrid.tsx  RentIndexPanel.tsx  StatsBar.tsx  SystemStatus.tsx  TendersPanel.tsx  TransactionsPanel.tsx
frontend/src/components/charts/: BudgetSparkline.tsx  ListingsPriceChart.tsx  NewsSourceDonut.tsx  NewsVolumeChart.tsx  ReitNavComparisonChart.tsx  ReitPriceChart.tsx  RentDistrictBarChart.tsx  RentHeatmap.tsx  RentTrendChart.tsx  TransactionBarChart.tsx  TransactionMonthlyChart.tsx  TransactionTrendChart.tsx
frontend/src/hooks/: useMarketData.ts
frontend/src/lib/: api.ts  format.ts  i18n.ts
frontend/src/pages/: AdminPage.tsx  BriefsPage.tsx  CommercialMarketPage.tsx  IndustrialMarketPage.tsx  IntelligencePage.tsx  LoginPage.tsx  PrimaryMarketPage.tsx  SubmarketsPage.tsx  WorkbenchPage.tsx
frontend/src/types/: api.ts
infra/postgres/: postgresql.conf
