[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ws-hub-backend"
version = "0.1.0"
description = "White Star Market Intelligence Hub — backend API, ingestion, and briefing engine"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "starlette>=0.41.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",  # for pgbackrest / sync ops
    "geoalchemy2>=0.17.0",     # PostGIS spatial types + ST_* functions

    # Auth
    "fastapi-users[sqlalchemy]>=13.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Config / secrets
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",

    # Data models
    "pydantic>=2.10.0",

    # Scheduling
    "apscheduler>=4.0.0a5",

    # HTTP clients
    "httpx>=0.28.0",
    "curl-cffi>=0.7.0",

    # Scraping / browser
    "playwright>=1.49.0",
    "playwright-stealth>=2.0.3",
    "selectolax>=0.3.21",
    "beautifulsoup4>=4.12.3",

    # Resilience
    "pybreaker>=1.2.0",
    "tenacity>=9.0.0",
    "redis>=5.2.0",

    # Object storage (S3-compatible)
    "boto3>=1.35.0",

    # PDF processing
    "pymupdf>=1.25.0",
    "pymupdf4llm>=0.0.17",

    # AI / LLM
    "anthropic>=0.40.0",

    # Observability
    "sentry-sdk[fastapi,sqlalchemy]>=2.19.0",
    "structlog>=24.4.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",

    # Templating (briefing)
    "jinja2>=3.1.4",

    # Utilities
    "python-multipart>=0.0.12",
    "orjson>=3.10.12",
    "arrow>=1.3.0",
    "yfinance>=0.2.50",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-recording>=0.13.2",
    "pytest-cov>=6.0.0",
    "syrupy>=4.7.2",
    "httpx>=0.28.0",  # for TestClient
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "types-aiofiles>=24.1.0",
    "types-passlib>=1.7.7",
    "factory-boy>=3.3.1",
    "faker>=33.0.0",
    "asgi-lifespan>=2.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",              # isort
    "UP",             # pyupgrade
    "B",              # flake8-bugbear
    "C4",             # flake8-comprehensions
    "SIM",            # flake8-simplify
    "TCH",            # flake8-type-checking
    "RUF",            # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"app/api/routes/*.py" = ["B008"]  # FastAPI Query/Depends in argument defaults is idiomatic
"app/api/routes/spatial.py" = ["TC001", "TC002", "TC003"]  # uuid/AsyncSession/User needed at runtime for FastAPI/Pydantic

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["playwright.*", "playwright_stealth.*", "curl_cffi.*",
          "pybreaker.*", "yfinance.*", "fitz.*", "pymupdf4llm.*",
          "boto3.*", "botocore.*", "selectolax.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "canary: live-URL integration tests (run nightly in CI only)",
    "golden: regression tests against hand-labeled golden set",
    "unit: fast, hermetic unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:apscheduler",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/alembic/*", "tests/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
